# KaDraw

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  SConscript  SConstruct  cleanup.sh  compile.sh
app/: configuration.h  draw_from_coordinates.cpp  drawit.cpp  evaluator.cpp  graphchecker.cpp  kadraw.cpp  parse_parameters.h
examples/: 1138_bus.graph  3elt.graph  4elt.graph  btree.graph  commanche_dual.graph  rgg_n_2_16_s0.graph
lib/: definitions.h
lib/algorithms/: shortest_paths.cpp  shortest_paths.h
lib/burn_drawing/: burn_drawing.cpp  burn_drawing.h
lib/data_structure/: graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h  union_find.h
lib/data_structure/priority_queues/: bucket_pq.h  maxNodeHeap.h  minNodeHeap.h  priority_queue_interface.h
lib/drawing/: config.h  graph_drawer.cpp  graph_drawer.h
lib/drawing/coarsening/: coarsening.cpp  coarsening.h  coarsening_configurator.h  contraction.cpp  contraction.h
lib/drawing/coarsening/clustering/: node_ordering.cpp  node_ordering.h  size_constraint_label_propagation.cpp  size_constraint_label_propagation.h
lib/drawing/coarsening/edge_rating/: edge_ratings.cpp  edge_ratings.h
lib/drawing/coarsening/matching/: compare_degrees.h  matching.cpp  matching.h  random_matching.cpp  random_matching.h
lib/drawing/coarsening/matching/gpa/: compare_rating.h  gpa_matching.cpp  gpa_matching.h  path.cpp  path.h  path_set.cpp  path_set.h
lib/drawing/coarsening/stop_rules/: stop_rules.h
lib/drawing/uncoarsening/: boundary_lookup.h  complete_boundary.cpp  complete_boundary.h  local_optimizer.cpp  local_optimizer.h  partial_boundary.cpp  partial_boundary.h  uncoarsening.cpp  uncoarsening.h
lib/io/: graph_io.cpp  graph_io.h
lib/tools/: dynamize_graph.cpp  dynamize_graph.h  graph_extractor.cpp  graph_extractor.h  macros_assertions.h  macros_common.h  mpi_tools.cpp  mpi_tools.h  quality_metrics.cpp  quality_metrics.h  random_functions.cpp  random_functions.h  timer.h
manual/: Bibliography.bib  example_graph.fig  example_graph_unweighed.fig  kadraw.aux  kadraw.bbl  kadraw.blg  kadraw.tex  kadraw.toc  makros.tex  masterReferences.bib  phdthesiscs.bib  references.bib
